--- a/WebContent/stylesheet/weblayout.css
+++ b/WebContent/stylesheet/weblayout.css
@@ -1,10 +1,9 @@
 #header {
     background-color:#BEC185;
     color:white;
-    text-align:center;
+    text-align:left;
     padding:5px;
 	font-style: italic;
-	text-align:center
 }
 #nav {
     line-height:25px;
@@ -15,13 +14,21 @@
     padding:5px;
     font-family: Georgia;	      
 }
+#nav1{
+	background-color:#A9E2F3;
+    text-align:center;
+    padding:5px;
+	font-style: italic;
+	width:auto;
+	color:white;
+	
+}
 #section {
-    width:65%;   
-    height:450px; 
+    width:90%;   
+    height:95%; 
     float:left;
     padding:10px;
     padding-left:50px;
-    overflow:scroll;	 	 
 }
 #arti{
 	width:10%;
@@ -29,31 +36,25 @@
     padding:10px;  	 	 
 }
 #end {
-    background-color:#BEC185;
+    background-color:#A9E2F3;
     color:white;
     clear:both; 
     text-align:right;
-   	padding:5px;	 	 
+   	padding:5px;
+   	font-weight: bold;	 	 
 }
-a.link, a.visited {
-	background-color:#BEC185;
+a:link, a:visited {
+	color:#787755;
+	text-decoration: none;
+	font-weight: bold;
+	font-size: x-large;
 }
-a.navigationbar:link, a.navigationbar:visited {
-	background-color:#7E814F;
-    display:block;
-    color: #000000;
-    width: 120px;
-    text-align: center;
-    padding: 4px;
-    text-decoration: none;
-    border-style:solid;
-    border-width:1px;
-    border-color:#7E814F;
-    border-collapse:collapse;
+
+a:hover, a:active {
+    font-weight: bold;
+    color:#ffffff;
 }
-a.navigationbar:hover, a.navigationbar:active {
-    background-color: #BEC185;
-}
+
 .td_span_center {
 text-align :center;
 background-color:#844DF2;
